<resources>
    <string name="app_name">Ejercicio2</string>
    <string name="calculadora">Calculadora</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="suma">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="igual">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiplicar">*</string>
    <string name="ac">AC</string>
    <string name="division">/</string>
    <string name="restar">-</string>
</resources>